# tic-tac-toe

./: CMakeLists.txt  LICENSE
include/: ai.h  board.h  boardstate.h  boardstatestreegenerator.h  boardstatetree.h  boardutils.h  display.h  input.h  logic.h  ncursesutils.h  node.h
src/: ai.cpp  boardstate.cpp  boardstatestreegenerator.cpp  boardstatetree.cpp  boardutils.cpp  display.cpp  input.cpp  logic.cpp  main.cpp  ncursesutils.cpp  node.cpp
